Formularz służący do dodania nowego konta

--- a/src/main/resources/JsfMessageResources.properties
+++ b/src/main/resources/JsfMessageResources.properties
@@ -4,3 +4,5 @@
 # field name or the field label if defined (e.g. "First name").
 #
 javax.faces.validator.BeanValidator.MESSAGE={1} {0}
+
+javax.faces.component.UIInput.REQUIRED={0}: Pole jest wymagane.
