--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -2,3 +2,7 @@
 # Overrides the default message for the @NotNull constraint.
 #
 javax.validation.constraints.NotNull.message=must be provided
+
+javax.validation.constraints.Size.message=d\u0142ugo\u015B\u0107 zawarto\u015Bci pola musi by\u0107 pomi\u0119dzy {min} a {max}.
+
+org.hibernate.validator.constraints.Email.message=podany adres nie jest poprawnym adresem email. 
