--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,13 @@
 			<artifactId>primefaces</artifactId>
 			<version>${primefaces-version}</version>
 		</dependency>
+		
+		<!-- PrimeFaces extensions -->
+		<dependency>
+			<groupId>org.primefaces.extensions</groupId>
+			<artifactId>primefaces-extensions</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
 		<!-- JSR 303 validation -->
 		<dependency>
