--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 
 		<org.slf4j-version>1.7.12</org.slf4j-version>
 		<log4j-version>1.2.17</log4j-version>
-
 		<spring-version>4.1.6.RELEASE</spring-version>
 		<springwebflow-version>2.4.1.RELEASE</springwebflow-version>
 		<springsecurity-version>3.2.6.RELEASE</springsecurity-version>
@@ -222,7 +221,19 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.2.Final</version>
 		</dependency>
-		
+
+		<!-- Liquibase -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.13</version>
+		</dependency>
+				
 		<!-- Inne -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
