--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
 			<artifactId>primefaces</artifactId>
 			<version>${primefaces-version}</version>
 		</dependency>
-		
+
 		<!-- PrimeFaces extensions -->
 		<dependency>
 			<groupId>org.primefaces.extensions</groupId>
@@ -186,19 +186,19 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>1.0.0.Final</version>
 		</dependency>
-				
+
 
 		<!-- oracle connector -->
 		<dependency>
-		    <groupId>com.oracle</groupId>
-		    <artifactId>ojdbc6</artifactId>
-		    <version>11.2.0.4</version>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.4</version>
 		</dependency>
 
 		<!-- Hibernate -->
@@ -219,7 +219,7 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>1.13</version>
 		</dependency>
-				
+
 		<!-- Inne -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -301,12 +301,24 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
-		
+
 		<!-- Javax Mail -->
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>4.2.1</version>
 		</dependency>
 	</dependencies>
 </project>
